# qspro-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/quicksilverpro/: __init__.py  __main__.py  cli.py
